style: fix z-index hero section

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -28,11 +28,11 @@
 
   .dark {
     --background: 20 14.3% 4.1%;
-    --foreground: 0 0% 80%;
+    --foreground: 0 0% 95%;
     --card: 24 9.8% 10%;
-    --card-foreground: 0 0% 80%;
+    --card-foreground: 0 0% 95%;
     --popover: 0 0% 9%;
-    --popover-foreground: 0 0% 80%;
+    --popover-foreground: 0 0% 95%;
     --primary: 142.1 70.6% 45.3%;
     --primary-foreground: 144.9 80.4% 10%;
     --secondary: 240 3.7% 15.9%;
